# bitcoin-price-prediction

./: 2020-2013-FINALL.csv  2020-2023-BTC-FOR-SENTI.csv  BAR-PLOT-TWT-COUNT.csv  LICENSE  NEGATIVE-TWT.csv  POSITIVE-TWT.csv  README.md  YEAR-TWT-COUNT.csv  app.py  btc.py  coins.csv  currency.csv  files_path.csv  final-all.csv  pyproject.toml  requirements.txt
static/: bitcoin-def.avif  btc-lose.avif  btc-money.avif  mining.avif
static/css/: crypto.css  del-01.css  home.css  pred.css
templates/: convertor.html  crypto.html  del-01.html  home.html  pred.html  senti.html
