[tool.poetry]
name = "repl_nix_bitcoin-price-prediction-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
yfinance = "^0.2.18"
bs4 = "^0.0.1"
cryptocompare = "^0.7.6"
Flask = "^2.3.2"
numerize = "^0.12"
pandas = "^2.0.1"
plotly = "^5.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
